Fixed cookie message display on mobile

--- a/assets/plugins/jquery.cookiebar/jquery.cookiebar.css
+++ b/assets/plugins/jquery.cookiebar/jquery.cookiebar.css
@@ -1,6 +1,5 @@
 #cookie-bar {background: #111111;
 font-size: 14px;
-height: 32px;
 line-height: 24px;
 color: #eeeeee;
 text-align: center;
